# easyfont

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: auto-publish.yml  python-publish.yml
easyfont/: __init__.py  _core.py  _types.py  core.py
