[project]
name = "easyfont"
version = "0.0.1-2"
authors = [
  { name = "ferretsprite", email = "ferret-sprite-goon@duck.com" }
]
description = "A simple font library for Python, designed to make working with fonts easy and intuitive."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "importlib-resources>=6.4.5",
]


[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"easyfont" = ["fonts/*.ttf"]